# advox

./: .env.example  .gitignore  README.md  docker-compose.yml  index.html  package.json  vercel.json
apps/api/: pyproject.toml  requirements.txt
apps/api/app/: main.py
apps/api/app/agents/: citation_verifier.py  document_analyzer.py  gateway_router.py  legal_retriever.py  safety_ethics.py  scenario_procedure.py  translator.py
apps/api/app/core/: auth.py  basic_auth.py  config.py  db.py  logging.py  rate_limit.py  security.py
apps/api/app/documents/: classifier.py  parser.py  pii_scrubber.py
apps/api/app/ingestion/fetchers/: http_fetcher.py  pdf_fetcher.py  playwright_fetcher.py
apps/api/app/prompts/: advocate_research.system.md  citation_verifier.system.md  core_router.system.md  document_analyzer.system.md  layman_scenario.system.md
apps/api/app/rag/: chunker.py  embeddings.py  reranker.py  retriever.py  vector_store.py
apps/api/app/routers/: __init__.py  admin.py  ai.py  courts.py  documents.py  health.py  sources.py  users.py
apps/api/app/schemas/: ai.py  citations.py  documents.py  sources.py
apps/api/app/services/: audit_service.py  disclaimer_service.py  ecourts_client.py  ingestion_pipeline.py  llm_client.py  source_service.py
apps/api/app/tests/: test_auth.py  test_citation_verifier.py  test_courts_router.py  test_db.py  test_ecourts.py  test_gateway_router.py  test_ingestion_restrictions.py  test_llm_client.py  test_missing_source_handling.py  test_pii_scrubber.py  test_rate_limit.py  test_refusal_text.py  test_retriever.py  test_router.py
(+165 files in other folders)
