[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "advox-api"
version = "0.1.0"
description = "Advox backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.3",
  "trafilatura>=1.12.2",
  "pdfplumber>=0.11.2",
  "pypdf>=4.3.1",
  "redis>=5.0.8",
  "psycopg[binary]>=3.2.1",
  "python-docx>=1.1.2",
  "arq>=0.26.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
